--- a/docker/m3nsch/Dockerfile
+++ b/docker/m3nsch/Dockerfile
@@ -1,5 +1,5 @@
 # stage 1: build
-FROM golang:1.12-alpine3.9 AS builder
+FROM golang:1.14-alpine3.11 AS builder
 LABEL maintainer="The M3DB Authors <m3db@googlegroups.com>"
 
 # Install Glide
@@ -16,7 +16,7 @@ RUN cd /go/src/github.com/m3db/m3/ && \
     make m3nsch_client-linux-amd64
 
 # stage 2: lightweight "release"
-FROM alpine:latest
+FROM alpine:3.11
 LABEL maintainer="The M3DB Authors <m3db@googlegroups.com>"
 
 COPY --from=builder /go/src/github.com/m3db/m3/bin/m3nsch_server /bin/
