Set go version for failing BK steps.

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -37,6 +37,8 @@ steps:
     <<: *common
   - name: "Services, Tools, Metalint"
     command: make clean install-vendor-m3 services tools metalint
+    env:
+      GIMME_GO_VERSION: 1.14.x
     plugins:
       docker-compose#v2.5.1:
         run: app
@@ -97,6 +99,8 @@ steps:
     <<: *common
   - label: "FOSSA license scan"
     command: make clean install-vendor-m3 fossa
+    env:
+      GIMME_GO_VERSION: 1.14.x
     plugins:
       docker-compose#v2.5.1:
         run: app
