--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 app:
-  image: golang:1.14-stretch
+  image: golang:1.14-buster
   volumes:
     - .:/go/src/github.com/m3db/m3
     - /usr/bin/buildkite-agent:/usr/bin/buildkite-agent
