--- a/scripts/development/m3_stack/m3coordinator-aggregator.yml
+++ b/scripts/development/m3_stack/m3coordinator-aggregator.yml
@@ -38,32 +38,26 @@ clusters:
 downsample:
   remoteAggregator:
     client:
-      placementKV:
-        namespace: /placement
-        environment: default_env
-      placementWatcher:
-        key: m3aggregator
-        initWatchTimeout: 10s
-      hashType: murmur32
-      shardCutoffLingerDuration: 1m
-      flushSize: 1440
-      maxTimerBatchSize: 1120
-      queueSize: 10000
-      queueDropType: oldest
-      encoder:
-        initBufferSize: 2048
-        maxMessageSize: 10485760
-        bytesPool:
-          buckets:
-            - capacity: 2048
-              count: 4096
-            - capacity: 4096
-              count: 4096
-          watermark:
-            low: 0.7
-            high: 1.0
-      connection:
-        writeTimeout: 250ms
+      type: m3msg
+      m3msg:
+        producer:
+          writer:
+            topicName: aggregator_ingest
+            topicServiceOverride:
+              zone: embedded
+              environment: default_env
+            placement:
+              isStaged: true
+            placementServiceOverride:
+              namespaces:
+                placement: /placement
+            connection:
+              numConnections: 32
+            messagePool:
+              size: 16384
+              watermark:
+                low: 0.2
+                high: 0.5
 
 ingest:
   ingester:
