[m3msg] Use multiple connections for M3Msg writers (#2230)

--- a/scripts/docker-integration-tests/aggregator/m3coordinator.yml
+++ b/scripts/docker-integration-tests/aggregator/m3coordinator.yml
@@ -81,6 +81,8 @@ downsample:
             placementServiceOverride:
               namespaces:
                 placement: /placement
+            connection:
+              numConnections: 4
             messagePool:
               size: 16384
               watermark:
