--- a/scripts/development/m3_stack/prometheus.yml
+++ b/scripts/development/m3_stack/prometheus.yml
@@ -30,7 +30,11 @@ scrape_configs:
 
   - job_name: 'coordinator'
     static_configs:
-      - targets: ['m3coordinator01:7203']
+      - targets:
+          - m3coordinator01:7210
+          - m3coordinator01:7211
+          - m3coordinator01:7212
+          - m3coordinator01:7213
 
   - job_name: 'dbnode'
     static_configs:
