--- a/glide.yaml
+++ b/glide.yaml
@@ -281,11 +281,15 @@ import:
   - package: github.com/twotwotwo/sorts
     version: bf5c1f2b8553dec28372aa6ac5a8bf53a20a4c5b
 
-  - package: github.com/valyala/tcplisten
-    version: ceec8f93295a060cdb565ec25e4ccf17941dbd55
+    # D_TEST_DEPS
+  - package: github.com/sirupsen/logrus
+    version: ~0.11.5
+  - package: github.com/go-errors/errors  
+  - package: github.com/lib/pq
+  - package: github.com/nats-io/go-nats
+    version: ~1.2.2
+  - package: github.com/oleiade/reflections
+    version: ~1.0.0
+  - package: github.com/ory/dockertest
+    version: ~3.0
 
-  - package: github.com/json-iterator/go
-    version: ^1.1.9
-
-  - package: github.com/go-kit/kit
-    version: ^0.10.0
