--- a/glide.yaml
+++ b/glide.yaml
@@ -266,3 +266,9 @@ import:
 
   - package: github.com/valyala/tcplisten
     version: ceec8f93295a060cdb565ec25e4ccf17941dbd55
+
+  - package: github.com/json-iterator/go
+    version: ^1.1.9
+
+  - package: github.com/go-kit/kit
+    version: ^0.10.0
