PR response, more comprehensive test

--- a/scripts/docker-integration-tests/query_fanout/m3coordinator-cluster-a.yml
+++ b/scripts/docker-integration-tests/query_fanout/m3coordinator-cluster-a.yml
@@ -59,6 +59,7 @@ carbon:
 tagOptions:
   idScheme: quoted
 
+# Use tag consolidation here; other integration tests handle id consolidations.
 query:
   consolidation:
     matchType: tags
