--- a/docs-beta/config.toml
+++ b/docs-beta/config.toml
@@ -1,6 +1,5 @@
 # Change the default theme to be use when building the site with Hugo
-theme = "hugo-theme-learn"
-
+theme = "docs-theme"
 
 baseURL = "/"
 languageCode = "en-US"
@@ -10,12 +9,52 @@ title = "M3DB Documentation"
 metaDataFormat = "yaml"
 defaultContentLanguageInSubdir= true
 
+# Highlighting config.
+pygmentsCodeFences = true
+pygmentsUseClasses = false
+# Use the new Chroma Go highlighter in Hugo.
+pygmentsUseClassic = false
+#pygmentsOptions = "linenos=table"
+# See https://help.farbox.com/pygments.html
+pygmentsStyle = "vs"
+
+enableGitInfo = true
+
+[frontmatter]
+# date = ["date", ":filename", "publishDate", "lastmod"]
+
+# Image processing configuration.
+[imaging]
+resampleFilter = "CatmullRom"
+quality = 75
+anchor = "smart"
+
+[services]
+[services.googleAnalytics]
+# Comment out the next line to disable GA tracking. Also disables the feature described in [params.ui.feedback].
+# id = "UA-00000000-0"
+
+#fullversion = "v1.18.0"
+#version = "v1.18"
+githubbranch = "master"
+docsbranch = "master"
+deprecated = false
+#currentUrl = "https://kubernetes.io/docs/home/"
+#nextUrl = "https://kubernetes-io-vnext-staging.netlify.com/"
+githubWebsiteRepo = "https://github.com/m3db/m3"
+githubWebsiteRaw = "raw.githubusercontent.com/m3db/m3"
+
+# Enable Algolia DocSearch
+# algolia_docsearch = false
+
+# Enable Lunr.js offline search
+offlineSearch = false
 
 [params]
   # Prefix URL to edit current page. Will display an "Edit this page" button on top right hand corner of every page. 
   # Useful to give opportunity to people to create merge request for your doc.
   # See the config.toml file from this documentation site to have an example.
-  editURL = "M3DB"
+  editURL = "https://github.com/m3db/m3"
   # Author of the site, will be used in meta information
   author = "m3"
   # Description of the site, will be used in meta information
@@ -43,6 +82,28 @@ defaultContentLanguageInSubdir= true
   themeVariant = ""
   twitter = "m3db_io"
 
+# TODO: Do not like doing this really
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+      unsafe = true
+    [markup.goldmark.parser]
+      attribute = true
+      autoHeadingID = true
+      autoHeadingIDType = "github"
+    [markup.tableOfContents]
+      endLevel = 3
+      ordered = false
+      startLevel = 2
+    [markup.goldmark.extensions]
+      definitionList = true
+      footnote = true
+      linkify = true
+      strikethrough = true
+      table = true
+      taskList = true
+      typographer = true
+
 [[Languages.en.menu.shortcuts]]
 name = "<i class='fab fa-fw fa-github'></i> GitHub"
 identifier = "ds"
@@ -51,3 +112,6 @@ weight = 10
 
 [outputs]
 home = [ "HTML", "RSS", "JSON"]
+page = [ "HTML"]
+section = [ "HTML"]
+chapter = [ "HTML"]
