Change submodule path

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/m3db/ci-scripts.git
 [submodule "docs-beta/themes/docs-theme"]
 	path = docs-beta/themes/docs-theme
-	url = git@github.com:chronosphereio/docs-theme.git
+	url = https://github.com/chronosphereio/docs-theme.git
